Able to return a public key for push notifications
